[workspace]
license = "MPL-2.0"
members = [
    #"direct-composition",
    "webrender",
    "webrender_api",
    "wrench",
]

[profile.release]
debug = true
panic = "abort"

[replace]
#"https://github.com/serde-rs/serde#serde_derive:1.0.42" = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums6", feature="deserialize_in_place" }
"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="a5677ce6c54747d496b63bb64038132a3495c5f8"}
"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="a5677ce6c54747d496b63bb64038132a3495c5f8" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="a5677ce6c54747d496b63bb64038132a3495c5f8" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-empty:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="a5677ce6c54747d496b63bb64038132a3495c5f8" }
