[package]
name = "webrender"
version = "0.53.1"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"

[features]
default = ["freetype-lib"]
freetype-lib = ["freetype/servo-freetype-sys"]
profiler = ["thread_profiler/thread_profiler"]
debugger = ["ws", "serde_json", "serde", "serde_derive"]
query = []
gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
app_units = "0.5.6"
bincode = "0.9"
byteorder = "1.0"
euclid = "0.15.2"
fxhash = "0.2.1"
lazy_static = "0.2"
log = "0.3"
num-traits = "0.1.32"
time = "0.1"
rayon = "0.8"
webrender_api = {path = "../webrender_api"}
bitflags = "1.0"
thread_profiler = "0.1.1"
plane-split = "0.6"
ws = { optional = true, version = "0.7.3" }
serde_json = { optional = true, version = "1.0" }
serde = { optional = true, version = "1.0" }
serde_derive = { optional = true, version = "1.0" }
servo-glutin = "0.12"
rand = "0.3"
#winit = "0.8"
winit = { git = "https://github.com/tomaka/winit.git" }
gfx-hal = { path = "../../gfx/src/hal", version = "0.1" }

[dependencies.gfx-backend-gl]
path = "../../gfx/src/backend/gl"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
path = "../../gfx/src/backend/vulkan"
version = "0.1"
#features = ["glsl-to-spirv"]
optional = true

[dev-dependencies]
angle = {git = "https://github.com/servo/angle", branch = "servo"}
env_logger = "0.4"
gleam = "0.4.8"
rand = "0.3"                # for the benchmarks

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4"
gamma-lut = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.4"
core-graphics = "0.9"
core-text = { version = "7.0", default-features = false }
gamma-lut = "0.2.1"
